recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:10: error: Unit does not take parameters
 	faisUnCarre()
                   ^