recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
 def faisUnCarre = {
 	for (i <-1 to 4) {
 	avance(100)
 	droite(90)
 	}
 }
 for (i<- 1 to 4) {
 	faisUnCarre()
 	droite(90)
 }
}
